==> 8bitgeek/caribou-rtos/caribou-1.x/target/chip/stm32/stm32f746/src/uart.c <==
#include <caribou/kernel/interrupt.h>
#include <caribou/lib/stdio.h>
#include <caribou/lib/errno.h>
#include <caribou/lib/heap.h>
#include <caribou/lib/string.h>
#include <chip/chip.h>
#include <chip/uart.h>
#include <board.h>
#include <stm32f7xx.h>
#include <stm32f7xx_hal_gpio.h>
#include <stm32f7xx_hal_uart.h>
#include <stm32f7xx_hal_rcc.h>
#include <stm32f7xx_hal_dma.h>
#define UART_INTERRUPT_MASK	(USART_IT_RXNE)

int chip_uart_set_config(void* device,caribou_uart_config_t* config)
{
	int rc=(-1);
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	if ( !config )
	{
		config = &private_device->config;
	}
	
	/*##-1- Configure the UART peripheral ######################################*/
	/* Put the USART peripheral in the Asynchronous mode (UART Mode) */
	/*
	 * UART configured as follows:
	 *	- Word Length = 8 Bits
	 *	- Stop Bit = One Stop bit
	 *	- Parity = None
	 *	- BaudRate = 9600 baud
	 *	- Hardware flow control disabled (RTS and CTS signals) 
	 */
	if ( config )
	{
		UART_HandleTypeDef			UartHandle;
		UartHandle.Instance        = private_device->base_address;
		UartHandle.Init.BaudRate   = (int)config->baud_rate;

        switch ( config->word_size )
		{
			default:
			case CARIBOU_UART_WORDSIZE_5:				/* Word size 5 bits */
			case CARIBOU_UART_WORDSIZE_6:				/* Word size 6 bits */
			case CARIBOU_UART_WORDSIZE_7:				/* Word size 7 bits */
			case CARIBOU_UART_WORDSIZE_8:				/* Word size 8 bits */
				UartHandle.Init.WordLength = UART_WORDLENGTH_8B;
				break;
			case CARIBOU_UART_WORDSIZE_9:				/* Word size 9 bits */		
				UartHandle.Init.WordLength = UART_WORDLENGTH_9B;
				break;
		}

		switch ( config->stop_bits )
		{
			default:
			case CARIBOU_UART_STOPBITS_05:
			case CARIBOU_UART_STOPBITS_1:
			case CARIBOU_UART_STOPBITS_15:
				UartHandle.Init.StopBits = UART_STOPBITS_1;
				break;
			case CARIBOU_UART_STOPBITS_2:
				UartHandle.Init.StopBits = UART_STOPBITS_2;
				break;
		}
	
		switch( config->parity_bits )
		{
			default:
			case CARIBOU_UART_PARITY_NONE:
				UartHandle.Init.Parity = USART_PARITY_NONE;
				break;
			case CARIBOU_UART_PARITY_ODD:
				UartHandle.Init.Parity = USART_PARITY_ODD;
				break;
			case CARIBOU_UART_PARITY_EVEN:
				UartHandle.Init.Parity = USART_PARITY_EVEN;
				break;
		}

		switch( config->flow_control )
		{
			default:
			case CARIBOU_UART_FLOW_NONE:		/* no flow control */
				UartHandle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
				break;
			case CARIBOU_UART_FLOW_RTS:			/* RTS flow control */
				UartHandle.Init.HwFlowCtl = UART_HWCONTROL_RTS;
				break;
			case CARIBOU_UART_FLOW_CTS:			/* CTS flow control */
				UartHandle.Init.HwFlowCtl = UART_HWCONTROL_CTS;
				break;
			case CARIBOU_UART_FLOW_RTS_CTS:		/* RTS+CTS flow control */
				UartHandle.Init.HwFlowCtl = UART_HWCONTROL_RTS_CTS;
				break;
		}
		
		UartHandle.Init.Mode = UART_MODE_TX_RX;
		UartHandle.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT; 
		if(HAL_UART_DeInit(&UartHandle) == HAL_OK)
		{
			if(HAL_UART_Init(&UartHandle) == HAL_OK)
			{
				private_device->base_address->CR1 |= USART_CR1_UE; /* Enable the USART */
				if(config->dma_mode)
				{
					chip_uart_enable_dma(private_device);
				}
				else
				{
					caribou_vector_install(private_device->vector,isr_uart,private_device);
					caribou_vector_enable(private_device->vector);
					private_device->base_address->CR1 |= USART_CR1_RXNEIE; /* Enable RX Interrupts */ 
				}
				rc=0;
			}
		}
	}
	return rc;
}
